--- a/frontend/src/singlevideo/iframeStyle.css
+++ b/frontend/src/singlevideo/iframeStyle.css
@@ -1,7 +1,8 @@
+/* iframeStyle.css */
 .video-wrapper {
   position: relative;
   width: 100%;
-  padding-bottom: 62%; /* 16:10 aspect ratio (10 / 16 = 0.625) */
+  padding-bottom: 61.3%; /* 16:10 aspect ratio (10 / 16 = 0.625) */
   height: 0;
 }
 
@@ -16,5 +17,11 @@
 @media (max-width: 768px) {
   .video-wrapper {
     padding-bottom: 67%; /* 16:9 aspect ratio for smaller screens */
+  }
+}
+
+@media (max-width: 980px) and (min-width: 768px) {
+  .video-wrapper {
+    padding-bottom:"67%"; 
   }
 }
